@@ -10,9 +10,8 @@
 # FOR A PARTICULAR PURPOSE.  See the GNU Library General Public License for
 # more details.
 #
-# You should have received a copy of the GNU Library General Public License
-# along with this library; if not, write to the Free Software Foundation, Inc.,
-# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
+# See the LICENSE file in the top-level directory of this distribution for the
+# full license terms.
 
 BEGIN { require 5.008; }
 
